syntax = "proto3";

package com.avg;


// Nachricht, die vom Client gesendet wird
message KaufauftragRequest {
  string orderId = 1;
  string customerId = 2;
  string productId = 3;
  string quantity = 4;
} 

// Nachricht, die vom Server als Antwort gesendet wird
message KaufauftragReply {
  string lieferdatum = 1;
  string lieferstatus = 2;
}

// Definition des gRPC-Service
service OrderService {
  // Kaufauftrag verarbeiten
  rpc newOrder (KaufauftragRequest) returns (KaufauftragReply);
}